feat: removed regular texts
