# docs/swagger.json
@@ -8,32 +8,6 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/texts": {
-            "get": {
-                "description": "Get all regular texts",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "texts"
-                ],
-                "summary": "Get regular texts",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/dto.GetRegularTextDto"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/texts/code-examples": {
             "get": {
                 "description": "Get code examples by programming language name",
@@ -184,17 +158,6 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.GetRegularTextDto": {
-            "type": "object",
-            "properties": {
-                "UUID": {
-                    "type": "string"
-                },
-                "content": {
                     "type": "string"
                 }
             }
